<resources>
    <string name="app_name">TadeotFeedback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_welcome">Willkommen an der HTL Leonding</string>
    <string name="iv_cd_htl">Image HTL Leonding</string>
    <string name="bt_start">Start</string>
    <string name="tv_question">Wie zufrieden waren Sie mit dem Tag der offenen Tür?</string>
    <string name="iv_cd">iv_cd</string>
    <string name="bt_no_answer">Keine Antwort</string>
    <string name="tv_about">Die Feedbackanwendung unterstützt die Organisatoren des Tags der offenen Tür bei der Optimierung der einzelnen Stationen</string>
    <string name="menu_main_about">About</string>
    <string name="nav_title_help">Hilfe</string>
    <string name="nav_title_about">About</string>
    <string name="nav_title_summary">Zusammenfassung</string>
    <string name="nav_title_question">Bewertung</string>
    <string name="nav_title_welcome">Startseite</string>
    <string name="txt_back_to_question">Wollen Sie noch einmal zurück zur letzten Frage?</string>
    <string name="bt_back_to_question">Zurück zur Frage</string>
    <string name="bt_finish">Beenden</string>
    <string name="tv_thank_you">Danke für Ihr Feedback</string>
    <string name="tv_last_rating">Ihre_letzte_bewertung_war_xxxx</string>
    <string name="help">Das ist ein Test für die Hilfe</string>
    <string name="menu_main_help">Help</string>
</resources>